--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -25,6 +25,16 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
+        # this produces artifacts in /dist folder
+        # actions/upload-artifact allows us to upload artifacts
+      - name: Upload artifacts
+        uses: actions/artifacts@v3
+        with:
+          name: dist-folder-files
+          path: |
+            dist
+            package.json
+          #use the pipe for multi-line paths  
   deploy:
     needs: build
     runs-on: ubuntu-latest
