--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -29,7 +29,7 @@ jobs:
         # this produces artifacts in /dist folder
         # actions/upload-artifact allows us to upload artifacts
       - name: Upload artifacts
-        uses: actions/artifacts@v3
+        uses: actions/upload-artifact@v3
         with:
           name: dist-folder-files
           path: |
